--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.74.0",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.503.0",
     "next": "^16.0.0",
