--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@types/react": "19.2.7",
+    "tailwindcss": "^4",
+    "typescript": "5.9.3"
   }
 }
